fix layout issue with Settings page due to overflowing body
git-svn-id: file:///home/awy/mirror/slim/trunk/server@15015 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -298,10 +298,6 @@ img#background { position:absolute; }
 	padding-bottom: 3px;
 }
 
-.settings #inner_header {
-	padding-bottom: 0;
-}
-
 #titleRight {
 	position: absolute;
 	left: 10px;
@@ -990,6 +986,10 @@ body.settings, body.settingsMenu {
 
 body.settingsMenu {
 	margin-left: 5px;
+}
+
+.settingsFrame #inner_header {
+	padding-bottom: 0;
 }
 
 .statusarea {
